--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-bg-dark.jpg" alt="">
+      <img src="assets/img/hero-bg.jpg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
