--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>John Ur Must</h2>
-            <p>I'm <span class="typed" data-typed-items="UX/UI Designer, Web Developer, Front-End Design, Front-End Developer, Full Stack Developer and Biker">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="UX/UI Designer, Web Developer, Front-End Design, Front-End Developer, Full Stack Developer and Biker Traveler">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
