--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section><!-- /About Section -->
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section">
+    <section id="stats" class="stats section" style="display: none">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -175,7 +175,7 @@
     </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
-    <section id="skills" class="skills section">
+    <section id="skills" class="skills section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
